# Rechroma

./: .dockerignore  .gitignore  README.md  config.example.yaml  docker-compose.gpu.yaml  docker-compose.yaml  mirror_models.sh  pyproject.toml
.github/workflows/: ci.yml  docker.yml
app/: config.py  main.py  version.py
app/api/: routes.py  schemas.py  security.py  uploads.py
app/core/: animate.py  cli.py  colorizer.py  device.py  download.py  media.py  model_registry.py  pipeline.py  restore.py  temporal.py  upscale.py  video.py
app/core/archs/: checkpoint.py  deoldify_unet.py  (+9 more)
app/jobs/: models.py  processor.py  service.py  store.py
app/telegram/: access.py  bot.py  chat_settings.py  runner.py
assets/drivers/: README.md
docker/: Dockerfile.cpu  Dockerfile.cuda
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
scripts/: next-version.sh
tests/: test_config.py
tests/api/: test_animate_api.py  test_api.py  test_uploads.py  test_video_api.py  test_video_config.py
tests/core/: test_animate.py  test_arch_keys.py  test_cli.py  test_colorizer.py  test_device.py  test_download.py  test_media.py  test_model_registry.py  test_pipeline.py  test_restore.py  test_restore_archs.py  test_temporal.py  test_tpsmm_arch.py  test_upscale.py  test_video.py
tests/jobs/: test_animate_processor.py  test_cancel.py  test_processor.py  test_service.py  test_store.py  test_store_video.py  test_video_processor.py
tests/telegram/: test_bot.py  test_telegram_core.py  test_video.py
(+31 files in other folders)
