[project]
name = "rechroma"
version = "0.0.0"
description = "Photo colorization & restoration service"
requires-python = ">=3.12"
dependencies = [
    # torch>=2.5 required for torch.serialization.safe_globals (safe weight loading).
    "torch>=2.5",
    "torchvision>=0.20",
    "pillow>=10.2",
    "numpy>=1.26",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "opencv-python-headless>=4.9",
]

[dependency-groups]
dev = ["pytest>=8.1", "ruff>=0.6", "mypy>=1.9", "types-pyyaml>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# CPU-only PyTorch wheels — matches the CPU Docker image (CLAUDE.md §8) and keeps
# `uv sync` from pulling the large CUDA build. The CUDA image overrides this index.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
packages = ["app"]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
